--- a/src/index.html
+++ b/src/index.html
@@ -5,53 +5,67 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Firebase</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=PT+Sans+Narrow:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200;400;700&display=swap" rel="stylesheet">
+
   </head>
   <body class="logging">
+  
     <div class="login-view">
-      <div class="login-buttons-container">
-        <img src="imgs/logo_project_low.png" alt="" />
+        <div class="login-buttons-container">
+    <div>
+      <h2>Bem-vindo na Comunidade de Apio ao Migrante</h2>
+  </div>     
+   <img src="imgs/Logo-1.png" alt="" >
         <button class="btn anonymous-log-in-btn">
-          INICIAR SESSIÓN ANÓNIMA
+          INICIAR SEÇÃO ANÓNIMA
         </button>
         <button class="btn google-log-in-btn">
-          INICIAR SESSIÓN CON GOOGLE
+          INICIAR SEÇÃO COM GOOGLE
         </button>
       </div>
       <div class="loading-container">
-        CARGANDO
+        CARREGANDO
         <div class="dot-flashing"></div>
       </div>
     </div>
     <div class="top-bar">
       <div>
-        <img src="imgs/logo_project_low.png" alt="" />
+        
+       <img src="imgs/Logo-1.png" alt="" /> 
       </div>
       <div>
         <img src="" alt="" class="photo-user" />
-        <button class="log-out-btn">🚪🐒</button>
+        <button class="log-out-btn">🚪</button>
       </div>
     </div>
     <div class="novel-view">
       <div class="description">
-        <h1>¡Hola escrimono! Te estaba esperando</h1>
+        <h3>Este é um espaço para você</h3>
         <p>
-          Delante de tí se encuentra la mejor novela jamás escrita. Solo hay un
-          inconveniente, está inacabada... Tu deber, así como el del resto de
-          escrimonos que lleguen aquí, será el de completarla.
+            Este espaço consiste em conectarte com outros migrantes e refugiados
+            com trajetoria no pais. Onde possam compartilhar  experiencias, oportunidades
+            de emprego, contactos, etc. A ideia e que voce possa encontrar emprego, assistência social, finalmente orientação oportuna o 
+            mais rápido possível de acordo com suas necessidades.</p>
         </p>
-        <p>
-          Solamente el tiempo dirá si esta novela colaborativa será la siguiente
-          gran obra maestra.
+            <h3>Regras da Comunidade </h3>
+          <p> Para manter uma comunicação saudável e respeitosa entre os participantes, considere o siguete:
         </p>
-        <p>O la mayor 💩 jamás escrita...</p>
-        <p>
-          Deja volar la imaginación y escribe algunos párrafos que sigan con el
-          relato planteado.
-        </p>
+        <ol class="list">
+            <li>Seja educado e respeitoso: A linguagem ofensiva, agressiva ou discriminatória não será tolerada. Os participantes devem tratar uns aos outros com respeito e consideração.</li>
+            <li>Mantenha o chat relevante: Certifique-se de que as postagens sejam relevantes para o assunto do chat. Evite postagens que não têm relação com o tema do chat.</li>
+            <li>Não compartilhe informações pessoais: É importante manter suas informações pessoais em segurança e evitar compartilhá-las no chat.</li>
+            <li>Não faça publicidade: Publicar propagandas ou promover produtos ou serviços não é permitido, a menos que seja explicitamente permitido pelo administrador do chat.</li>
+            <li>Seja consciente do tom e da linguagem: As mensagens devem ser escritas em um tom claro e respeitoso. As mensagens em caixa alta ou com excesso de pontuação podem ser interpretadas como agressivas ou rudes.</li>
+        </ol>
       </div>
       <div class="novel-container"></div>
       <div class="loading-container">
-        CARGANDO
+        CARREGANDO
         <div class="dot-flashing"></div>
       </div>
       <div class="form-container">
@@ -61,7 +75,7 @@
             id=""
             cols="30"
             rows="5"
-            placeholder="Escribe aquí el siguiente párrafo de la novela"
+            placeholder="Escreva seu texto aqui"
             autofocus
           ></textarea>
           <button type="submit">Publicar✍🏽</button>
