--- a/src/index.html
+++ b/src/index.html
@@ -20,7 +20,7 @@
     <div>
       <h2>Bem-vindo na Comunidade de Apio ao Migrante</h2>
   </div>     
-   <img src="imgs/Logo-1.png" alt="" >
+   <!-- <img src="imgs/Logo-1.png" alt="" > -->
         <button class="btn anonymous-log-in-btn">
           INICIAR SEÇÃO ANÓNIMA
         </button>
@@ -35,8 +35,7 @@
     </div>
     <div class="top-bar">
       <div>
-        
-       <img src="imgs/Logo-1.png" alt="" /> 
+        <img src="imgs/logo.png" alt="" /> 
       </div>
       <div>
         <img src="" alt="" class="photo-user" />
