--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Firebase</title>
+    <title>Apoio-Migrante-firebase</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=PT+Sans+Narrow:wght@400;700&display=swap" rel="stylesheet">
@@ -16,11 +16,9 @@
   <body class="logging">
   
     <div class="login-view">
-        <div class="login-buttons-container">
-    <div>
-      <h2>Bem-vindo na Comunidade de Apio ao Migrante</h2>
-  </div>     
-   <!-- <img src="imgs/Logo-1.png" alt="" > -->
+        <div class="login-buttons-container">  
+          <h2>Bem-vindo a Comunidade</h2>
+          <img class="logo-img" src="imgs/logo.png" alt="">
         <button class="btn anonymous-log-in-btn">
           INICIAR SEÇÃO ANÓNIMA
         </button>
@@ -35,7 +33,7 @@
     </div>
     <div class="top-bar">
       <div>
-        <img src="imgs/logo.png" alt="" /> 
+        <img class="logo-img-1"src="/imgs/logo-1.png" alt="" /> 
       </div>
       <div>
         <img src="" alt="" class="photo-user" />
