--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,7 @@
   
     <div class="login-view">
         <div class="login-buttons-container">  
-          <h2>Bem-vindo a Comunidade</h2>
+          <h2>Bem-vindo à Comunidade</h2>
           <img class="logo-img" src="imgs/logo.png" alt="">
         <button class="btn anonymous-log-in-btn">
           INICIAR SEÇÃO ANÓNIMA
@@ -45,12 +45,12 @@
         <h3>Este é um espaço para você</h3>
         <p>
             Este espaço consiste em conectarte com outros migrantes e refugiados
-            com trajetoria no pais. Onde possam compartilhar  experiencias, oportunidades
-            de emprego, contactos, etc. A ideia e que voce possa encontrar emprego, assistência social, finalmente orientação oportuna o 
+            com trajetória no País. Onde possam compartilhar  experiências, oportunidades
+            de emprego, contatos, etc. A ideia é que você possa encontrar emprego, assistência social, entre outros; finalmente orientação oportuna o 
             mais rápido possível de acordo com suas necessidades.</p>
         </p>
             <h3>Regras da Comunidade </h3>
-          <p> Para manter uma comunicação saudável e respeitosa entre os participantes, considere o siguete:
+          <p> Para manter uma comunicação saudável e respeitosa entre os participantes, considere o seguinte:
         </p>
         <ol class="list">
             <li>Seja educado e respeitoso: A linguagem ofensiva, agressiva ou discriminatória não será tolerada. Os participantes devem tratar uns aos outros com respeito e consideração.</li>
