--- a/src/index.html
+++ b/src/index.html
@@ -55,10 +55,16 @@
         <ol class="list">
             <li>Seja educado e respeitoso: A linguagem ofensiva, agressiva ou discriminatória não será tolerada. Os participantes devem tratar uns aos outros com respeito e consideração.</li>
             <li>Mantenha o chat relevante: Certifique-se de que as postagens sejam relevantes para o assunto do chat. Evite postagens que não têm relação com o tema do chat.</li>
-            <li>Não compartilhe informações pessoais: É importante manter suas informações pessoais em segurança e evitar compartilhá-las no chat.</li>
+            <li>Não compartilhe informações pessoais: É importante manter suas informações pessoais em segurança e evitar compartilhá-las no chat; mais se precisar colocar, fica a vontade e responsabilidade da pessoa.</li>
             <li>Não faça publicidade: Publicar propagandas ou promover produtos ou serviços não é permitido, a menos que seja explicitamente permitido pelo administrador do chat.</li>
             <li>Seja consciente do tom e da linguagem: As mensagens devem ser escritas em um tom claro e respeitoso. As mensagens em caixa alta ou com excesso de pontuação podem ser interpretadas como agressivas ou rudes.</li>
         </ol>
+
+        <h3>Entre em contato conosco:</h3>
+
+          <p>Se você tiver alguma pergunta, sugestão ou precisar de assistência adicional, por favor, envie um e-mail para:
+            <a href="apoiomigrante2023@outlook.com">apoiomigrante2023@outlook.com</a>; faremos o possível para responder o mais breve possível.</p>
+       
       </div>
       <div class="novel-container"></div>
       <div class="loading-container">
